add_executable(listing_6_4 listing_6_4.cpp)
add_executable(listing_6_5 listing_6_5.cpp)
add_executable(listing_6_7 listing_6_7.cpp)
add_executable(listing_6_11 listing_6_11.cpp)
add_executable(listing_6_13 listing_6_13.cpp)
add_executable(listing_6_15 listing_6_15.cpp)
add_executable(listing_6_17 listing_6_17.cpp)
add_executable(listing_6_18 listing_6_18.cpp)
add_executable(listing_6_33 listing_6_33.cpp)
add_executable(listing_6_21 listing_6_21.cpp)
add_executable(listing_6_22 listing_6_22.cpp)
add_executable(listing_6_26 listing_6_26.cpp)
add_executable(exercise_6_1 exercise_6_1.cpp)
add_executable(exercise_6_2 exercise_6_2.cpp)